fat: Use JDK 25🫸🌀✏️📗🐧🐳